# Comet

./: .gitignore  Cargo.toml  LICENSE.md  README.md  install.sh  main.repository.toml  pubspec.yaml
.cargo/: config.toml
cli/: Cargo.toml  example.package.toml
cli/src/: config.rs  main.rs
cli/src/cli/: mod.rs  tests.rs  tests_advanced.rs
cli/src/workspace/: mod.rs
libcomet/: Cargo.toml
libcomet/src/: lib.rs
libcomet/src/package/: mod.rs
libcomet/src/repo/: mod.rs
libcomet/src/request/: package.rs  repo.rs
libcomet/src/response/: package.rs
libcomet/src/workspace/: mod.rs
server/: Cargo.toml
server/src/: api.rs  main.rs  request.rs  splash.rs
server/src/cli/: mod.rs  prompt.rs
server/src/server/: api.rs  mod.rs  panic.rs
server/src/workspace/: mod.rs  packages.rs
src/: cli.rs  main.rs
src/package/: mod.rs
src/workspace/: mod.rs
tests/spec/: example.package.toml  example.repository.toml  server_ident.json
