[workspace]

resolver = "2"
# CLI - Comet user facing CLI
# SERVER - Comet self hosted server that can communicate directly with comet in a way it understands
# LIBCOMET - A way to share common datatypes such as packages, repositories, etc
members = ["cli", "libcomet", "server"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = "z"   # or "s" for smaller binaries
strip = true

[profile.dev]
codegen-units = 16
incremental = true
debug-assertions = false
overflow-checks = false
opt-level = 0
lto = "thin"

[workspace.dependencies]
anyhow = "1.0.93"
dirs-next = "2.0.0"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
thiserror = "2.0.3"
log = "0.4.22"
env_logger = "0.11.5"
