[workspace]

resolver = "2"
# CLI - Comet user facing CLI
# SERVER - Comet self hosted server that can communicate directly with comet in a way it understands
# LIBCOMET - A way to share common datatypes such as packages, repositories, etc
members = ["cli", "libcomet", "server"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = "z"   # or "s" for smaller binaries
strip = true
rpath = false

[profile.dev]
codegen-units = 16
incremental = true
debug-assertions = true
overflow-checks = false
opt-level = 0
lto = "thin"

[profile.release.build-override]
opt-level = 3
codegen-units = 256

[workspace.dependencies]
libcomet = { path = "./libcomet", version = "0.*" }
anyhow = "1.0.95"
dirs-next = "2.0.0"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
thiserror = "2.0.9"
log = {version = "0.4.22", features = ["serde"]}
env_logger = "0.11.6"
colored = "2.2.0"
rayon = "1"
