[package]
name = "comet"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = {version = "0.1.43",features = ["override"]}
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
dirs-next = "2.0.0"
indicatif = "0.17.9"
serde = { version = "1.0.215", features = ["derive"] }
sysinfo = "0.32.0"
tempfile = "3.14.0"
thiserror = "2.0.3"
toml = "0.8.19"
rocket = "0.5.1"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = "z"  # or "s" for smaller binaries
strip = true

