[package]
default-run = "comet"
name = "comet"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = {version = "0.1.43",features = ["override"]}
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
indicatif = "0.17.9"

sysinfo = "0.32.0"
tempfile = "3.14.0"
thiserror = {workspace = true}

anyhow = {workspace = true}
dirs-next = {workspace = true}
serde = {workspace = true}
toml = {workspace = true}
