[package]
default-run = "comet"
name = "comet"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = {version = "0.1.43",features = ["override"]}
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
indicatif = "0.17.9"

sysinfo = "0.33.0"
tempfile = "3.14.0"
thiserror = {workspace = true}

anyhow = {workspace = true}
dirs-next = {workspace = true}
serde = {workspace = true}
toml = {workspace = true}
libcomet.workspace = true
reqwest = { version = "0.12.9", features = ["blocking"] }
serde_json = "1.0.134"
versions = { version = "6.3.2", features = ["serde"] }
lazy_static = "1.5.0"
tokio = { version = "1.42.0", features = ["macros", "parking_lot", "rt", "rt-multi-thread"] }


[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
