[package]
name = "comet-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
anyhow = {workspace = true}
serde = { workspace = true, features = ["derive"] }
dirs-next = {workspace = true}
log ={ workspace = true}
env_logger = {workspace = true}